# DA-25-26-T2

./: .gitignore  .ignore  CMakeLists.txt  CentralManager.cpp  CentralManager.h  DataEntities.h  Doxyfile  Graph.h  MaxFlow.cpp  MaxFlow.h  Parser.cpp  Parser.h  README.md  main  main.cpp
Documentation/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CentralManager_8cpp.html  CentralManager_8cpp_8o_8d.html  CentralManager_8cpp__incl.map  CentralManager_8cpp__incl.md5  CentralManager_8h.html  CentralManager_8h__dep__incl.map  CentralManager_8h__dep__incl.md5  CentralManager_8h__incl.map  CentralManager_8h__incl.md5  CentralManager_8h_source.html  DataEntities_8h.html  DataEntities_8h__dep__incl.map  DataEntities_8h__dep__incl.md5  DataEntities_8h__incl.map  DataEntities_8h__incl.md5  DataEntities_8h_source.html  Graph_8h.html  Graph_8h__dep__incl.map  Graph_8h__dep__incl.md5  Graph_8h__incl.map  Graph_8h__incl.md5  Graph_8h_source.html  MaxFlow_8cpp.html  MaxFlow_8cpp_8o_8d.html  MaxFlow_8cpp__incl.map  MaxFlow_8cpp__incl.md5  MaxFlow_8h.html  MaxFlow_8h__dep__incl.map  MaxFlow_8h__dep__incl.md5  MaxFlow_8h__incl.map  MaxFlow_8h__incl.md5  MaxFlow_8h_source.html  Parser_8cpp.html  Parser_8cpp_8o_8d.html  Parser_8cpp__incl.map  Parser_8cpp__incl.md5  Parser_8h.html  Parser_8h__dep__incl.map  (+57 more)
latex/: CMakeCCompilerId_8c.tex  CMakeCXXCompilerId_8cpp.tex  CentralManager_8cpp.tex  CentralManager_8cpp_8o_8d.tex  CentralManager_8cpp__incl.md5  CentralManager_8h.tex  CentralManager_8h__dep__incl.md5  CentralManager_8h__incl.md5  CentralManager_8h_source.tex  Graph_8h.tex  (+43 more)
(+56 files in other folders)
